# quantumdesk

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
src/: ai.rs  alerts.rs  app.rs  config.rs  data.rs  lib.rs  main.rs  metrics.rs  ui.rs
