[package]
name = "quantumdesk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
